more edits to Armor site, working on card for products

--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -101,11 +101,11 @@ body {
     display:flex;
     // width:300px;
   }
-  li.nav__item.nav__item--logo{
+  li.nav__item.nav__item--logo{ 
     flex:2;
   }
   // .nav .nav__section .nav__item .nav__link--logo .svg-wrapper{
-  //   width:auto;
+  //   background:$nav-blue;
   // }
   .nav{
     background:none;
