--- a/css/base.scss
+++ b/css/base.scss
@@ -9,6 +9,7 @@
 
 *, *:before, *:after {
   box-sizing: inherit;
+  box-sizing: border-box;
 }
 
 html {
@@ -158,4 +159,106 @@ p {
   top: 18px;
   width: 0%;
   left: 50%;
+}
+
+.stores {
+  display:flex;
+  flex-wrap:wrap;
+  margin: -1.25em 0 0 -1.25em;
+}
+
+.store {
+  background:white;
+  margin: 1.25em 0 0 1.25em;
+  width: calc(33.3333% - 1.25em);
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  &--wide {
+    width: 100%;
+  }
+  &__details {
+    padding: 2rem;
+    h4{
+      font-family: 'Panama-Bold';
+      font-size:2rem;
+    }
+    p {
+      line-height: 1.2;
+      margin-bottom: 0;
+    }
+  }
+  @media all and (max-width: 850px) {
+    width: calc(50% - 1.25em);
+  }
+  @media all and (max-width: 550px) {
+    width: 100%;
+  }
+}
+
+.store__actions {
+  position: relative;
+  z-index: 2;
+  border-bottom: 1px solid rgba(0,0,0,0.2);
+  box-shadow: 0 1px 0 rgba(0,0,0,0.2), 0 1px 0 rgba(255,255,255,0.2);
+  margin-bottom: 50px;
+  padding-top: 10px;
+  padding-bottom: 20px;
+  display: flex;
+  color: white;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.store__action {
+  font-size: 10px;
+  svg {
+    width: 25px;
+    fill: white
+  }
+  &--edit {
+    a {
+      border-bottom: 0;
+    }
+  }
+}
+
+.inner {
+  max-width: 900px;
+  margin: 0 auto; }
+  @media all and (max-width: 900px) {
+    .inner {
+      padding: 2rem; } }
+.product__image {
+  height:220px;
+  position: relative;
+  text-align: right;
+  &:before {
+    display: block;
+   content: '';
+   /* position: absolute; */
+   height: 100%;
+   height: 150px;
+   width: 100%;
+   top: 0;
+   right: 0;
+   background: #09377c;
+   z-index: 1;
+   -webkit-clip-path: polygon(0 0, 100% 0, 100% 90%, 0% 100%);
+   clip-path: polygon(0 0, 100% 0, 100% 90%, 0% 100%);
+  }
+  img {
+    height: 100%;
+      width: 100%;
+      max-height: 165px;
+      max-width: 180px;
+      transform: translatey(-110px);
+      top: 0;
+      right: 0;
+      margin: 0 auto;
+      z-index:  100;
+      position:  relative;
+      display: block;
+      left: 0;
+      -o-object-fit: cover;
+      object-fit: cover;
+      }
 }
